--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,22 +2,25 @@
 
 // Font url + font weights
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,500,700'); 
-$font-netmobiel-bold: 700;
-$font-netmobiel-medium: 500;
-$font-netmobiel-light: 300;
-$font-netmobiel-family: 'Montserrat', sans-serif;
+$font-bold: 700;
+$font-medium: 500;
+$font-light: 300;
+$font-family: 'Montserrat', sans-serif;
 $font-color: #7d7d7d;
 
 // Netmobiel color definitions
-$color-netmobiel-green: #58acab;
-$color-netmobiel-sub-green: #458b88;
-$color-netmobiel-dark-green: #095e5b;
-$color-netmobiel-white: #ffffff;
+$color-green: #58acab;
+$color-sub-green: #458b88;
+$color-dark-green: #095e5b;
+$color-white: #ffffff; // Just because we can.
 
 // Default form configuration
 $form-border-radius: 25px;
-$form-padding-top-bottom: 40px;
+$form-margin-top-bottom: 20px;
 $form-placeholder-font-color: #aeb1b3;
 
 // Default button configuration
 $btn-border-radius: $form-border-radius;
+
+// Photo
+$photo-height: 100px;
