Reworked CSS (and fixed progressbar for registration at the same time). - styling.scss now contains most commonly used classes. - typography and other styling are not split. - Introduced primary / secondary colorscheme. - Revamped all existing screens to use new css styling.

--- a/src/scss/_bootstrap.scss
+++ b/src/scss/_bootstrap.scss
@@ -1,7 +1,21 @@
-@import '_variables';
+@import "_variables";
 
 // Override default btn config from Bootstrap
 .btn {
-    border-radius: $btn-border-radius;
-    border: 1px solid #ffffff;
+  border-radius: $btn-border-radius;
+  border: 1px solid #ffffff;
+}
+
+.btn-block {
+  height: $btn-height;
+}
+
+.btn-primary {
+  background-color: $color-primary;
+  color: $color-secondary;
+}
+
+.btn-secondary {
+  background-color: $color-secondary;
+  color: $color-primary;
 }
