fixed checkbox row

--- a/src/scss/styling.scss
+++ b/src/scss/styling.scss
@@ -25,6 +25,10 @@ body {
   background: $color-secondary;
 }
 
+.background-secondary-dark {
+  background: $color-secondary-dark;
+}
+
 // Typography
 .text-primary {
   color: $color-primary;
