--- a/src/scss/_bootstrap.scss
+++ b/src/scss/_bootstrap.scss
@@ -1,21 +1,7 @@
-@import "_variables";
+@import '_variables';
 
 // Override default btn config from Bootstrap
 .btn {
-  border-radius: $btn-border-radius;
-  border: 1px solid #ffffff;
-}
-
-.btn-block {
-  height: $btn-height;
-}
-
-.btn-primary {
-  background-color: $color-primary;
-  color: $color-secondary;
-}
-
-.btn-secondary {
-  background-color: $color-secondary;
-  color: $color-primary;
+    border-radius: $btn-border-radius;
+    border: 1px solid #ffffff;
 }
