Removed bootstrap, added Vuetify

--- a/src/scss/styling.scss
+++ b/src/scss/styling.scss
@@ -1,5 +1,5 @@
 // Import variables --> bootstrap --> this file
-@import "_bootstrap";
+@import "_variables";
 
 // App-specific configuration
 body {
