--- a/src/scss/styling.scss
+++ b/src/scss/styling.scss
@@ -12,6 +12,7 @@ body {
 .box-widget {
   border-radius: $form-border-radius;
   padding: $box-widget-padding;
+  font-weight: $font-light;
 }
 
 .background-primary {
@@ -28,6 +29,11 @@ body {
 .background-white{
   background: $color-white;
 }
+
+.background-green {
+  background: $color-green;
+}
+
 // Typography
 .text-primary {
   color: $color-primary;
@@ -68,8 +74,4 @@ body {
 // TPO: Dunno why...
 .v-btn {
   margin: 0px;
-}
-
-.v-text-field {
-  padding-top: 0;
 }
