added search ride date screen

--- a/src/scss/styling.scss
+++ b/src/scss/styling.scss
@@ -34,6 +34,10 @@ body {
   background: $color-green;
 }
 
+.background-orange {
+  background: $color-orange;
+}
+
 // Typography
 .text-primary {
   color: $color-primary;
