- Implemented the text highlighting in bold when typing in the searchInput. - Also added a border radius scss variable for the searchInput.

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -29,6 +29,7 @@ $color-secondary-dark: $color-secondary;
 
 // Default form configuration
 $form-border-radius: 25px;
+$form-border-radius-input: 15px;
 $form-margin-top-bottom: 20px;
 $form-placeholder-font-color: #aeb1b3;
 
