added profile header

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -19,6 +19,7 @@ $color-green: #2E8997;
 $color-orange: #FF8500;
 $color-alertRed: #D0021B;
 $color-borderGray: #E9E9E9;
+$color-stars: #cda823;
 
 $color-primary: $color-green;
 $color-primary-light: $color-primary;
