--- a/src/scss/styling.scss
+++ b/src/scss/styling.scss
@@ -43,6 +43,14 @@ body {
   color: $color-primary;
 }
 
+.text-primary-uppercase {
+  color: $color-primary;
+  text-transform: uppercase;
+  font-size: smaller !important;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
 .text-secondary {
   color: $color-secondary;
 }
