--- a/src/scss/styling.scss
+++ b/src/scss/styling.scss
@@ -55,6 +55,10 @@ body {
   color: $color-secondary;
 }
 
+.text-optionsGrey {
+  color: $color-optionsGray;
+}
+
 .text-center {
   text-align: center;
 }
@@ -102,4 +106,18 @@ body {
 
 .border-radius-input{
   border-radius: $form-border-radius;
+}
+
+.icon-grey {
+  color: $color-optionsGray !important;
+}
+
+.blue-white-button {
+  color: $color-white !important;
+  background-color: $color-green !important;
+}
+
+.orange-white-button {
+  background-color: $color-orange !important;
+  color: $color-white !important;
 }
