Changed HomePage to include profile image. - Note: Profile image is position absolute.
Also updated HomePage to display proper greeting based on time of day.

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -28,6 +28,8 @@ $color-secondary: $color-orange;
 $color-secondary-light: lighten( $color-secondary, 20%);
 $color-secondary-dark: darken( $color-secondary, 20%);
 
+$border-radius: 10px;
+
 // Default form configuration
 $form-border-radius: 25px;
 $form-border-radius-input: 15px;
