--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -31,14 +31,12 @@ $color-secondary-dark: darken( $color-secondary, 20%);
 $border-radius: 10px;
 
 // Default form configuration
-$form-border-radius: 25px;
-$form-border-radius-input: 15px;
 $form-margin-top-bottom: 20px;
 $form-placeholder-font-color: #aeb1b3;
 
 // Default button configuration
 $btn-height: 40px;
-$btn-border-radius: $form-border-radius;
+$btn-border-radius: $border-radius;
 
 // Photo
 $photo-height: 100px;
