--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,13 +1,21 @@
 // Global constants should be defined here
 
 // Font url + font weights
-@import url("https://fonts.googleapis.com/css?family=Montserrat:300,500,700");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,500,600");
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700");
 
 $font-bold: 700;
 $font-medium: 400;
 $font-light: 300;
+$font-size: 1.2em;
 $font-family: "Lato", sans-serif;
+
+$font-family-button: "Montserrat", sans-serif;
+$font-weight-button: 600;
+
+$h1-font-size: 1.5em;
+$h2-font-size: 1.3em;
+$h3-font-size: 1.1em;
 
 // Color definitions
 $color-white: #FFFFFF;
@@ -29,6 +37,8 @@ $color-secondary-light: lighten( $color-secondary, 20%);
 $color-secondary-dark: darken( $color-secondary, 20%);
 
 $border-radius: 10px;
+
+$footer-height: 56px;
 
 // Default form configuration
 $form-margin-top-bottom: 20px;
