--- a/src/scss/styling.scss
+++ b/src/scss/styling.scss
@@ -2,7 +2,7 @@
 @import "_variables";
 
 // App-specific configuration
-body {
+.v-application {
   font-family: $font-family;
   font-weight: $font-light;
   font-size: $font-size;
@@ -23,7 +23,7 @@ h3 {
   color: $color-dark-grey;
 }
 
-// Box widget
+// // Box widget
 .box-widget {
   border-radius: $border-radius;
   padding: $box-widget-padding;
@@ -33,120 +33,120 @@ h3 {
   background: $color-primary;
 }
 
-.background-secondary {
-  background: $color-secondary;
-}
+// .background-secondary {
+//   background: $color-secondary;
+// }
 
-.background-secondary-dark {
-  background: $color-secondary-dark;
-}
+// .background-secondary-dark {
+//   background: $color-secondary-dark;
+// }
 .background-white{
   background: $color-white;
 }
 
-.background-green {
-  background: $color-green;
-}
+// .background-green {
+//   background: $color-green;
+// }
 
-.background-orange {
-  background: $color-orange;
-}
+// .background-orange {
+//   background: $color-orange;
+// }
 
-// Typography
-.text-primary {
-  color: $color-primary;
-}
+// // Typography
+// .text-primary {
+//   color: $color-primary;
+// }
 
-.text-primary-uppercase {
-  color: $color-primary;
-  text-transform: uppercase;
-  font-size: smaller !important;
-  font-weight: bold;
-  margin-bottom: 5px;
-}
+// .text-primary-uppercase {
+//   color: $color-primary;
+//   text-transform: uppercase;
+//   font-size: smaller !important;
+//   font-weight: bold;
+//   margin-bottom: 5px;
+// }
 
-.text-secondary {
-  color: $color-secondary;
-}
+// .text-secondary {
+//   color: $color-secondary;
+// }
 
-.text-center {
-  text-align: center;
-}
+// .text-center {
+//   text-align: center;
+// }
 
-.text-left {
-  text-align: left;
-}
+// .text-left {
+//   text-align: left;
+// }
 
-.text-right {
-  text-align: right;
-}
+// .text-right {
+//   text-align: right;
+// }
 
-.text-small {
-  font-size: 0.8em;
-}
+// .text-small {
+//   font-size: 0.8em;
+// }
 
-.full-width {
-  width: 100%;
-}
+// .full-width {
+//   width: 100%;
+// }
 
-.full-height {
- height: 100%;
-}
+// .full-height {
+//  height: 100%;
+// }
 
-.vertical-align-center {
-  align-items: center;
-}
+// .vertical-align-center {
+//   align-items: center;
+// }
 
-// TPO: Dunno why...
-.v-btn {
-  margin: 0px;
-  font-weight: $font-weight-button;
-  font-family: $font-family-button;
-}
+// // TPO: Dunno why...
+// .v-btn {
+//   margin: 0px;
+//   font-weight: $font-weight-button;
+//   font-family: $font-family-button;
+// }
 
-.v-text-field {
-  padding-top: 0;
-}
+// .v-text-field {
+//   padding-top: 0;
+// }
 
-.absolute-icon{
-  position: absolute;
-}
+// .absolute-icon{
+//   position: absolute;
+// }
 
-.container {
-  height: 100%;
-}
+// .container {
+//   height: 100%;
+// }
 
-.border-radius-input{
-  border-radius: $border-radius;
-}
+// .border-radius-input{
+//   border-radius: $border-radius;
+// }
 
-.white-grey {
-  color: $color-white-grey;
-}
+// .white-grey {
+//   color: $color-white-grey;
+// }
 
-.light-grey {
-  color: $color-light-grey;
-}
+// .light-grey {
+//   color: $color-light-grey;
+// }
 
-.mid-grey {
-  color: $color-mid-grey;
-}
+// .mid-grey {
+//   color: $color-mid-grey;
+// }
 
-.dark-grey {
-  color: $color-dark-grey;
-}
+// .dark-grey {
+//   color: $color-dark-grey;
+// }
 
-.form-label {
-  color: $color-dark-grey;
-  font-size: 16px;
-}
+// .form-label {
+//   color: $color-dark-grey;
+//   font-size: 16px;
+// }
 
-.thumb-grey {
-  background-color: $color-mid-grey;
-  border-color: $color-mid-grey;
-}
+// .thumb-grey {
+//   background-color: $color-mid-grey;
+//   border-color: $color-mid-grey;
+// }
 
-// Vuetify expansion panel
-.v-expansion-panel {
-  box-shadow: none;
-}
+// // Vuetify expansion panel
+// .v-expansion-panel {
+//   box-shadow: none;
+// }
