Fixed expansion panels Search options Made app force white background, maybe possible to do this through theme?

--- a/src/scss/styling.scss
+++ b/src/scss/styling.scss
@@ -8,6 +8,11 @@
   font-size: $font-size;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+}
+.v-application--wrap{
+  //Waarom moet dit?
+  background:#ffffff;
 }
 
 h1 {
