Introduced "RoundBadge" object, which is just the badge for notification of any number (as String).
Layout still doesn't work and should be revamped.

--- a/src/scss/styling.scss
+++ b/src/scss/styling.scss
@@ -47,6 +47,10 @@ h3 {
   background: $color-primary;
 }
 
+.text-white {
+  color: $color-white;
+}
+
 // .background-secondary {
 //   background: $color-secondary;
 // }
