Added config for the api token Added styling for the map so it can be in the background

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -53,3 +53,9 @@ $photo-height: 100px;
 
 // Box-widge configuration
 $box-widget-padding: 20px;
+
+$header-height: 56px;
+
+$map-width: 100vw;
+$map-height: 200px;
+
