Added configuration file for the different notification options Implemented SingleSelect component cause there was no vuetify component for this

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -60,3 +60,5 @@ $header-height: 56px;
 $map-width: 100vw;
 $map-height: 200px;
 
+$single-select-background-color: lighten(lightgray, 12%);
+$single-border-radius: 9px;
