Nbl 330 distinguish shoutouts (#225)
* Made a generic tab component
Added generic tabs to the ShoutOutOverviewPage. If the user profile is both driver and passenger

* Added generic tab component to the inbox page

* Also added the tab bar to the TripOverviewPage

* Added back the beforeRouterEnter/beforeRouterLeave but now it returns 0 as alternative. So if the application doesnt remember the latest selected tab it returns 0. The problem with not returning an alternative is that it will return 'undefined'and then no cards will be displayed.
Also one commit back the equations were improved so there are no type coercions.

* Added the check to view 'mijn oproepen' or 'community oproepen'

* WiP:
Changed tab name
Still need to create the call to fetch one user his shoutouts

* Added active class for the tabs
Added actions for fetching my shoutouts
Implemented my shoutouts
Only need the backend to give us 'myShoutOuts'
Also fixed on typo...

* Now showing some data of my shoutouts
removed console.log

* Added the backend call to fetch 'my' shoutouts

* Now the user his own shoutouts are visible

* Cleaned the code

* Added grouping for my shoutouts.

* Styling fixes.

* Persist selected tab between routes.

Co-authored-by: Timothy Sealy <timothy.sealy@gmail.com>

--- a/src/scss/styling.scss
+++ b/src/scss/styling.scss
@@ -84,7 +84,10 @@ h3 {
   color: $color-secondary !important;
 }
 
-
 .selected-map {
   color: $color-secondary !important;
+}
+
+.lighter-tab {
+  opacity: 0.88;
 }
