--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -64,3 +64,4 @@ $single-select-border-radius: 9px;
 $single-select-text-color: lighten(rgb(0, 0, 0), 50%);
 $single-select-box-shadow: 0 1px 1px 0 rgba(74, 74, 74, 0.2),
   0 2px 6px 0 rgba(74, 74, 74, 0.2);
+$background-light-green: rgba(46, 137, 151, 0.1);
