Implemented own stepper

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -56,6 +56,9 @@ $box-widget-padding: 20px;
 
 $header-height: 56px;
 
+$stepper-height: 30px;
+$stepper-width: 30px;
+
 $map-width: 100vw;
 $map-height: 200px;
 
