--- a/src/scss/styling.scss
+++ b/src/scss/styling.scss
@@ -105,3 +105,7 @@ h3 {
 .color-alert-red {
   color: $color-alertRed !important;
 }
+
+.cancelled-card-border {
+  border-color: $color-alertRed;
+}
