Nbl 403 npm update (#275)
* NPM update.

* Fix lint issues

* Replaced v-content with v-main (deprecation).

* Fixed styling issue due to update in vuetify package.

--- a/src/scss/styling.scss
+++ b/src/scss/styling.scss
@@ -96,6 +96,11 @@ h3 {
   color: $color-orange;
 }
 
+//HACK: Upgrading vuetity has a different max-width. 
+// We are reverting this here.
+.container.fill-height > .row {
+  max-width: 100% !important;
+}
 .cancelled-banner {
   font-weight: bold;
   color: $color-alertRed;
