NBL-710 Added unconfirm trip/ride for testing.

--- a/src/scss/styling.scss
+++ b/src/scss/styling.scss
@@ -131,3 +131,10 @@ h3 {
 .smaller-font-size {
   font-size: smaller !important;
 }
+h4.netmobiel {
+  text-transform: uppercase;
+  color: $color-primary;
+}
+.clickable-item {
+  cursor: pointer;
+}
